--- a/CuaHangThucPham/CuaHangThucPham/Views/Home/Index.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
                                             <a href="product.html"><img src="~/Public/image/product/@products[i].Image" alt="lorem ippsum dolor dummy" title="lorem ippsum dolor dummy" class="img-responsive" /> </a>
                                             <div class="button-group">
                                                 <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                                <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
+                                                <button type="button" class="addtocart-btn" onclick="cart.add('@products[i].ProductID', '1' ,'@products[i].ProductName','@products[i].Image')";>Thêm vào giỏ</button>
                                                 <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                                             </div>
                                         </div>
@@ -50,7 +50,7 @@
                                         </div>
                                         <div class="button-group">
                                             <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                            <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
+                                            <button type="button" class="addtocart-btn" onclick="cart.add('@products[i].ProductID', '1' ,'@products[i].ProductName','@products[i].Image')";>Thêm vào giỏ</button>
                                             <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                                         </div>
                                     </div>
@@ -71,7 +71,7 @@
                                             <a href="product.html"> <img src="~/Public/image/product/@products[i].Image" alt="lorem ippsum dolor dummy" title="lorem ippsum dolor dummy" class="img-responsive" /> </a>
                                             <div class="button-group">
                                                 <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                                <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
+                                                <button type="button" class="addtocart-btn" onclick="cart.add('@products[i].ProductID', '1' ,'@products[i].ProductName','@products[i].Image')";>Thêm vào giỏ</button>
                                                 <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                                             </div>
                                         </div>
@@ -81,7 +81,7 @@
                                         </div>
                                         <div class="button-group">
                                             <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                            <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
+                                            <button type="button" class="addtocart-btn" onclick="cart.add('@products[i].ProductID', '1' ,'@products[i].ProductName','@products[i].Image')";>Thêm vào giỏ</button>
                                             <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                                         </div>
                                     </div>
@@ -102,7 +102,7 @@
                                             <a href="#"> <img src="~/Public/image/product/@products[i].Image" alt="lorem ippsum dolor dummy" title="lorem ippsum dolor dummy" class="img-responsive" /> </a>
                                             <div class="button-group">
                                                 <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                                <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
+                                                <button type="button" class="addtocart-btn" onclick="cart.add('@products[i].ProductID', '1' ,'@products[i].ProductName','@products[i].Image')";>Thêm vào giỏ</button>
                                                 <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                                             </div>
                                         </div>
@@ -112,7 +112,7 @@
                                         </div>
                                         <div class="button-group">
                                             <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                            <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
+                                            <button type="button" class="addtocart-btn" onclick="cart.add('@products[i].ProductID', '1' ,'@products[i].ProductName','@products[i].Image')";>Thêm vào giỏ</button>
                                             <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                                         </div>
                                     </div>
@@ -132,7 +132,7 @@
                                         <a href="product.html"> <img src="~/Public/image/product/@products[i].Image" alt="lorem ippsum dolor dummy" title="lorem ippsum dolor dummy" class="img-responsive" /> </a>
                                         <div class="button-group">
                                             <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                            <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
+                                            <button type="button" class="addtocart-btn" onclick="cart.add('@products[i].ProductID', '1' ,'@products[i].ProductName','@products[i].Image')";>Thêm vào giỏ</button>
                                             <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                                         </div>
                                     </div>
@@ -142,7 +142,7 @@
                                     </div>
                                     <div class="button-group">
                                         <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                        <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
+                                        <button type="button" class="addtocart-btn" onclick="cart.add('@products[i].ProductID', '1' ,'@products[i].ProductName','@products[i].Image')";>Thêm vào giỏ</button>
                                         <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                                     </div>
                                 </div>
@@ -180,7 +180,7 @@
                                     <a href="product.html"> <img src="~/Public/image/product/@products[i].Image" alt="lorem ippsum dolor dummy" title="lorem ippsum dolor dummy" class="img-responsive" /> </a>
                                     <div class="button-group">
                                         <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                        <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
+                                        <button type="button" class="addtocart-btn" onclick="cart.add('@products[i].ProductID', '1' ,'@products[i].ProductName','@products[i].Image')";>Thêm vào giỏ</button>
                                         <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                                     </div>
                                 </div>
@@ -190,7 +190,7 @@
                                 </div>
                                 <div class="button-group">
                                     <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                    <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
+                                    <button type="button" class="addtocart-btn" onclick="cart.add('@products[i].ProductID', '1' ,'@products[i].ProductName','@products[i].Image')";>Thêm vào giỏ</button>
                                     <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                                 </div>
                             </div>
