--- a/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutRight.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutRight.cshtml
@@ -21,6 +21,7 @@
     @Scripts.Render("~/Public/javascript/common.js")
     @Scripts.Render("~/Public/javascript/global.js")
     @Scripts.Render("~/Public/owl-carousel/owl.carousel.min.js")
+    @Scripts.Render("~/Public/addtocart.js")
 </head>
 
 <body class="blog col-2">
