--- a/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLeft1.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLeft1.cshtml
@@ -22,6 +22,7 @@
     @Scripts.Render("~/Public/javascript/common.js")
     @Scripts.Render("~/Public/javascript/global.js")
     @Scripts.Render("~/Public/owl-carousel/owl.carousel.min.js")
+    @Scripts.Render("~/Public/addtocart.js")
 </head>
 
 <body class="account-register col-2">
