--- a/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLeft.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLeft.cshtml
@@ -23,7 +23,7 @@
     @Scripts.Render("~/Public/owl-carousel/owl.carousel.min.js")
     @Scripts.Render("~/Public/addtocart.js")
     @Styles.Render("~/Public/css/ringphone.css")
-    @Styles.Render("~/Public/css/themecss/lib.css")
+    @Styles.Render("~/Public/css/lib.css")
 </head>
 
 <body class="category col-2 left-col">
