--- a/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLogin.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLogin.cshtml
@@ -13,7 +13,7 @@
 
     @Styles.Render("~/Public/create/style.css")
     @Styles.Render("~/Public/css/ringphone.css")
-    @Styles.Render("~/Public/css/themecss/lib.css")
+    @Styles.Render("~/Public/css/lib.css")
 
 </head>
 
