--- a/CuaHangThucPham/CuaHangThucPham/Views/SubCategories/Index.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/SubCategories/Index.cshtml
@@ -61,7 +61,7 @@
                         </a>
                         <div class="button-group">
                             <button type="button" class="wishlist" data-toggle="tooltip" title="Thêm vào danh sách yêu thích"><i class="fa fa-heart-o"></i></button>
-                            <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
+                            <button type="button" class="addtocart-btn" onclick="cart.add('@products[i].ProductID', '1' ,'@products[i].ProductName','@products[i].Image')";>Thêm vào giỏ</button>
                             <button type="button" class="compare" data-toggle="tooltip" title="Chuyển ảnh sản phẩm"><i class="fa fa-exchange"></i></button>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
                     </div>
                     <div class="button-group">
                         <button type="button" class="wishlist" data-toggle="tooltip" title="Thêm vào danh sách yêu thích"><i class="fa fa-heart-o"></i></button>
-                        <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
+                        <button type="button" class="addtocart-btn" onclick="cart.add('@products[i].ProductID', '1' ,'@products[i].ProductName','@products[i].Image')";>Thêm vào giỏ</button>
                         <button type="button" class="compare" data-toggle="tooltip" title="Chuyển ảnh sản phẩm"><i class="fa fa-exchange"></i></button>
                     </div>
                 </div>
